--- a/aboutpage.html
+++ b/aboutpage.html
@@ -253,13 +253,13 @@
               </li>
 
               <li class="site-footer__item">
-                <a href="./location.html" class="site-footer__item-link">
+                <a href="./index.html" class="site-footer__item-link">
                   Location
                 </a>
               </li>
 
               <li class="site-footer__item">
-                <a href="./Careers.html" class="site-footer__item-link">
+                <a href="./index.html" class="site-footer__item-link">
                   Careers
                 </a>
               </li>
