--- a/aboutpage.html
+++ b/aboutpage.html
@@ -196,11 +196,12 @@
           <h3 class="connect__paragraph">Sign up and Scoot off today</h3>
 
           <div class="connect__box">
-            <a class="connect__app-store-link" href="https://appstore.com">
+            <a class="connect__app-store-link" target="_blank" href="https://appstore.com">
               <div class="connect__box-in">
                 <img
                   class="conect__img"
                   src="./img/apple.png"
+                  
                   alt="apple"
                   width="24"
                   height="28"
@@ -212,7 +213,7 @@
               </div>
             </a>
 
-            <a class="connect__google-play" href="https://googleplay.com">
+            <a class="connect__google-play" target="_blank" href="https://googleplay.com"> 
               <div class="connect__box-in connect__box-in-other">
                 <img
                   class="conect__img"
@@ -259,7 +260,7 @@
               </li>
 
               <li class="site-footer__item">
-                <a href="./index.html" class="site-footer__item-link">
+                <a href="#"  class="site-footer__item-link">
                   Careers
                 </a>
               </li>
